--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-Flask_WTF==0.14.2
-WTForms==2.1
+alembic==0.9.8
 Flask==0.12.2
+Werkzeug==0.14.1
+WTForms==2.1
+SQLAlchemy==1.2.5
+Flask_WTF==0.14.2
+Flask_Migrate==2.1.1
+Flask_SQLAlchemy==2.3.2
