--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-alembic==0.9.8
+alembic==0.9.9
 Flask==0.12.2
+flask_login==0.4.1
+flask_migrate==2.1.1
+flask_sqlalchemy==2.3.2
+flask_wtf==0.14.2
+SQLAlchemy==1.2.5
 Werkzeug==0.14.1
 WTForms==2.1
-SQLAlchemy==1.2.5
-Flask_WTF==0.14.2
-Flask_Migrate==2.1.1
-Flask_SQLAlchemy==2.3.2
